fix tablet header and hero section spacing

--- a/css/header.css
+++ b/css/header.css
@@ -141,11 +141,11 @@
 @media (min-width: 768px) {
   .header {
     background-color: #edf3f8;
-    height: 110px;
+    height: 48px;
     display: flex;
     align-items: flex-start;
 
-    padding-top: 40px;
+    padding: 40px 40px 0;
   }
 
   .logo-wrapper {
@@ -153,7 +153,7 @@
 
     align-items: center;
     width: 100%;
-    padding: 0px 40px;
+    /* padding: 0px 40px; */
   }
 
   .menu_logo {
@@ -181,7 +181,7 @@
     line-height: 17px;
     display: flex;
     align-items: center;
-    margin-bottom: 24px;
+    /* margin-bottom: 24px; */
   }
 
   .email__button_header span {
@@ -199,16 +199,16 @@
 
   .header_links {
     display: flex;
-    margin-top: 16px;
-    margin-bottom: auto;
+    /* margin-top: 16px;
+    margin-bottom: auto; */
     gap: 40px;
   }
 
   .payAPI_logo {
     width: 135px;
     height: 36px;
-    margin-bottom: 32px;
-    margin-top: 4px;
+    /* margin-bottom: 32px; */
+    /* margin-top: 4px; */
   }
 
   .Header_link_text {
